--- a/themes/next/source/css/_common/components/post/post-reward.styl
+++ b/themes/next/source/css/_common/components/post/post-reward.styl
@@ -39,6 +39,8 @@
     display: inline-block;
     margin: 0.8em 2em 0 2em;
 }
+
+/* 关闭文字闪动
 #wechat:hover p{
     animation: roll 0.1s infinite linear;
     -webkit-animation: roll 0.1s infinite linear;
@@ -49,6 +51,7 @@
     -webkit-animation: roll 0.1s infinite linear;
     -moz-animation: roll 0.1s infinite linear;
 }
+*/
 #bitcoin:hover p {
     animation: roll 0.1s infinite linear;
     -webkit-animation: roll 0.1s infinite linear;
